caption added alignment fixed

--- a/css/torres-style.css
+++ b/css/torres-style.css
@@ -30,7 +30,7 @@ p {
 #positive-reviews {
     width:45%;
     float:right;
-    margin-right: 5%;
+    margin-right: 3%;
     margin-bottom:20%;
     
 }
@@ -38,6 +38,14 @@ p {
     float:left;
     margin-left: 3%;
 }
+
+figcaption {
+    margin-top: 1%;
+    width:45%;
+    margin-left: 3%;
+    font-family: 'Open Sans',sans-serif;
+}
+
 #contact-info li {
     list-style: none;
     display:inline;
@@ -47,4 +55,8 @@ p {
     font-family: "Open Sans";
     font-weight: 200;
     margin-left: 35%;
+}
+
+#positive-reviews {
+    float:right;
 }
